# enterprise-rag-platform

./: .env.example  .gitignore  CHANGELOG.md  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: documents.py  me.py  query.py  router.py
backend/app/core/: auth.py  config.py
backend/app/models/: auth.py  documents.py  query.py
backend/app/services/: answer_graph.py  bm25_index.py  bm25_ops.py  chunking.py  citations.py  embeddings.py  evidence.py  extraction.py  firestore_repo.py  gcs_storage.py  generation.py  hybrid_search.py  lifecycle.py  lifecycle_rules.py  rrf.py  search.py  upload.py  users.py  vector_ops.py  vector_search.py
backend/tests/: conftest.py  test_answer_api.py  test_auth.py  test_chunking.py  test_citations_and_bm25_warm.py  test_documents_read_api.py  test_embeddings.py  test_eval_harness.py  test_evidence.py  test_extraction.py  test_gcs_storage.py  test_health.py  test_hybrid_retrieval.py  test_lifecycle_api.py  test_lifecycle_rules.py  test_search_api.py  test_upload.py  test_vector_search.py
docs/: backlog.md  grok-three-agent-protocol.md  issues_log.md  phases.md  requirements.md  ui-specs.md
eval/: README.md  __init__.py
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
terraform/: apis.tf  artifact_registry.tf  cloud_run.tf  edge.tf  firestore.tf  gcs.tf  iam.tf  kms.tf  locals.tf  main.tf  outputs.tf  providers.tf  secrets.tf  service_accounts.tf  state_buckets.tf  variables.tf  wif.tf  (+2 more)
(+93 files in other folders)
